much work on testing and implementation of stock replacement wheel system

--- a/GameData/KSPWheel/Patches/wheel1patch.cfg
+++ b/GameData/KSPWheel/Patches/wheel1patch.cfg
@@ -1,6 +1,8 @@
 //roverWheelS2 - the probe wheels
-@PART[roverWheel2]
++PART[roverWheel2]
 {
+	@name = KSPW-roverWheel2
+	@title = KSPWheels roverWheel2
 	-MODULE[ModuleWheelBase]{}
 	-MODULE[ModuleWheelSuspension]{}
 	-MODULE[ModuleWheelSteering]{}
@@ -9,34 +11,67 @@
 	-MODULE[ModuleWheelDamage]{}
 	MODULE
 	{
-		name = KSPWheelModule
+		name = KSPWheelBase
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0.1939
 		wheelPivotName = WheelPivot
-		wheelName = wheel
-		bustedWheelName = bustedwheel
-		suspensionName = SuspensionPivot
-		suspensionExtPos = -0.026
-		steeringName = SteeringPivot		
+		wheelPivotAxis = 1, 0, 0
 		wheelRadius = 0.1575
 		wheelMass = 0.040
 		suspensionTravel = 0.195
 		suspensionTarget = 0.5
-		suspensionOffset = 0
 		suspensionSpring = 25
 		suspensionDamper = 4
+	}
+	MODULE
+	{
+		name = KSPWheelSuspension
+		suspensionName = SuspensionPivot
+		wheelColliderName = WheelCollider
+		suspensionOffset = -0.18
+		suspensionAxis = 0, 1, 0
+	}
+	MODULE
+	{
+		name = KSPWheelSteering
+		wheelColliderName = WheelCollider
+		steeringName = SteeringPivot
 		maxSteeringAngle = 40
+		steeringAxis = 0, 1, 0
+		steeringResponse = 10
+	}
+	MODULE
+	{
+		name = KSPWheelMotor
+		wheelColliderName = WheelCollider
 		maxMotorTorque = 0.5
-		maxBrakeTorque = 12
 		resourceAmount = 0.25
+		throttleResponse = 2
+	}
+	MODULE
+	{
+		name = KSPWheelBrakes
+		wheelColliderName = WheelCollider
+		maxBrakeTorque = 12
+		brakeResponse = 2
+	}
+	MODULE
+	{
+		name = KSPWheelDamage
+		wheelColliderName = WheelCollider
+		impactTolerance = 100
+		wheelName = wheel
+		bustedWheelName = bustedwheel
 	}
 }
 
 //roverWheelM1 - the doughnut
 //has rescaleFactor = 1.25 (default, unspecified in config)
 //thus some of these values differ from the stock specified values (no clue how they handle the rescale for wheels...)
-@PART[roverWheel1]
++PART[roverWheel1]
 {
+	@name = KSPWheel-roverWheel1
+	@title = KSPWheel-roverWheel1
 	-MODULE[ModuleWheelBase]{}
 	-MODULE[ModuleWheelSuspension]{}
 	-MODULE[ModuleWheelSteering]{}
@@ -46,65 +81,152 @@
 	// %rescaleFactor = 1
 	MODULE
 	{
-		name = KSPWheelModule
+		name = KSPWheelBase
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0.25
-		suspensionName = suspensionPivot
-		suspensionExtPos = 0.09
-		steeringName = SteeringPivot		
 		wheelPivotName = WheelPivot
-		wheelName = wheel
-		bustedWheelName = wheelDamaged
+		wheelPivotAxis = 1, 0, 0
 		wheelRadius = 0.47375
 		wheelMass = 0.40
 		suspensionTravel = 0.3
 		suspensionTarget = 0.5
-		suspensionOffset = 0
 		suspensionSpring = 100
 		suspensionDamper = 20
-		maxSteeringAngle = 30
-		maxMotorTorque = 10
-		maxBrakeTorque = 10
-		resourceAmount = 0.25
 		loadRating = 1.25
 		minLoadRating = 0.1
 		maxLoadRating = 2
 	}
-}
-
-//roverWheelTR-2L - truck wheels
-@PART[wheelMed]
-{
-	-MODULE[ModuleWheelBase]{}
-	-MODULE[ModuleWheelSuspension]{}
-	-MODULE[ModuleWheelSteering]{}
-	-MODULE[ModuleWheelMotor]{}
-	-MODULE[ModuleWheelBrakes]{}
-	-MODULE[ModuleWheelDamage]{}
 	MODULE
 	{
-		name = KSPWheelModule
+		name = KSPWheelSuspension
+		suspensionName = suspensionPivot
 		wheelColliderName = WheelCollider
-		wheelColliderOffset = 0.125
-		suspensionName = SuspensionPivot
-		suspensionExtPos = -0.198
-		steeringName = SteeringPivot		
-		wheelPivotName = WheelPivot
-		wheelName = wheel
-		bustedWheelName = bustedwheel
-		wheelRadius = 0.58
-		wheelMass = 0.040
-		suspensionTravel = 0.125
-		suspensionTarget = 0.5
-		suspensionOffset = 0
-		suspensionSpring = 100
-		suspensionDamper = 20
+		suspensionOffset = -0.24
+		suspensionAxis = 0, 1, 0
+	}
+	MODULE
+	{
+		name = KSPWheelSteering
+		wheelColliderName = WheelCollider
+		steeringName = SteeringPivot
 		maxSteeringAngle = 30
-		maxMotorTorque = 58
-		maxBrakeTorque = 12
-		resourceAmount = 0.25	
+		steeringAxis = 0, 1, 0
+		steeringResponse = 10
+	}
+	MODULE
+	{
+		name = KSPWheelMotor
+		wheelColliderName = WheelCollider
+		maxMotorTorque = 10
+		resourceAmount = 0.25
+		throttleResponse = 2
+	}
+	MODULE
+	{
+		name = KSPWheelBrakes
+		wheelColliderName = WheelCollider
+		maxBrakeTorque = 10
+		brakeResponse = 2
+	}
+	MODULE
+	{
+		name = KSPWheelDamage
+		wheelColliderName = WheelCollider
+		impactTolerance = 100
+		wheelName = wheel
+		bustedWheelName = wheelDamaged
 	}
 }
+
+roverWheelTR-2L - truck wheels
+// +PART[wheelMed]
+// {
+	// @name = KSPWheel-wheelMed
+	// @title = KSPWheel-wheelMed
+	// -MODULE[ModuleWheelBase]{}
+	// -MODULE[ModuleWheelSuspension]{}
+	// -MODULE[ModuleWheelSteering]{}
+	// -MODULE[ModuleWheelMotor]{}
+	// -MODULE[ModuleWheelBrakes]{}
+	// -MODULE[ModuleWheelDamage]{}
+	
+	// MODULE
+	// {
+		// name = KSPWheelModule
+		// wheelPivotName = WheelPivot
+		// wheelName = wheel
+		// bustedWheelName = bustedwheel
+		// wheelRadius = 0.58
+		// wheelMass = 0.040
+		// suspensionTravel = 0.125
+		// suspensionTarget = 0.5
+		// suspensionOffset = 0
+		// suspensionSpring = 100
+		// suspensionDamper = 20
+		// maxSteeringAngle = 30
+		// maxMotorTorque = 58
+		// maxBrakeTorque = 12
+		// resourceAmount = 0.25	
+	// }
+	
+	// MODULE
+	// {
+		// name = KSPWheelBase
+		// wheelColliderName = WheelCollider
+		// wheelColliderOffset = 0.125
+		// wheelPivotName = WheelPivot
+		// wheelPivotAxis = 1, 0, 0
+		// wheelRadius = 0.47375
+		// wheelMass = 0.40
+		// suspensionTravel = 0.3
+		// suspensionTarget = 0.5
+		// suspensionSpring = 100
+		// suspensionDamper = 20
+		// loadRating = 1.25
+		// minLoadRating = 0.1
+		// maxLoadRating = 2
+	// }
+	// MODULE
+	// {
+		// name = KSPWheelSuspension
+		// suspensionName = SuspensionPivot
+		// wheelColliderName = WheelCollider
+		// suspensionOffset = -0.18
+		// suspensionAxis = 0, 1, 0
+	// }
+	// MODULE
+	// {
+		// name = KSPWheelSteering
+		// wheelColliderName = WheelCollider
+		// steeringName = SteeringPivot
+		// maxSteeringAngle = 30
+		// steeringAxis = 0, 1, 0
+		// steeringResponse = 10
+	// }
+	// MODULE
+	// {
+		// name = KSPWheelMotor
+		// wheelColliderName = WheelCollider
+		// maxMotorTorque = 10
+		// resourceAmount = 0.25
+		// throttleResponse = 2
+	// }
+	// MODULE
+	// {
+		// name = KSPWheelBrakes
+		// wheelColliderName = WheelCollider
+		// maxBrakeTorque = 10
+		// brakeResponse = 2
+	// }
+	// MODULE
+	// {
+		// name = KSPWheelDamage
+		// wheelColliderName = WheelCollider
+		// impactTolerance = 100
+		// wheelName = wheel
+		// bustedWheelName = wheelDamaged
+	// }
+// }
 
 //roverWheelXL3 - giant tank-steering wheels
 @PART[roverWheel3]
