--- a/GameData/KSPWheel/Patches/wheel1patch.cfg
+++ b/GameData/KSPWheel/Patches/wheel1patch.cfg
@@ -22,19 +22,20 @@
 		suspensionTarget = 0.5
 		suspensionSpring = 25
 		suspensionDamper = 4
+		loadRating = 0.5
+		minLoadRating = 0.1
+		maxLoadRating = 1
 	}
 	MODULE
 	{
 		name = KSPWheelSuspension
 		suspensionName = SuspensionPivot
-		wheelColliderName = WheelCollider
 		suspensionOffset = -0.18
 		suspensionAxis = 0, 1, 0
 	}
 	MODULE
 	{
 		name = KSPWheelSteering
-		wheelColliderName = WheelCollider
 		steeringName = SteeringPivot
 		maxSteeringAngle = 40
 		steeringAxis = 0, 1, 0
@@ -43,7 +44,6 @@
 	MODULE
 	{
 		name = KSPWheelMotor
-		wheelColliderName = WheelCollider
 		maxMotorTorque = 0.5
 		resourceAmount = 0.25
 		throttleResponse = 2
@@ -51,14 +51,12 @@
 	MODULE
 	{
 		name = KSPWheelBrakes
-		wheelColliderName = WheelCollider
 		maxBrakeTorque = 12
 		brakeResponse = 2
 	}
 	MODULE
 	{
 		name = KSPWheelDamage
-		wheelColliderName = WheelCollider
 		impactTolerance = 100
 		wheelName = wheel
 		bustedWheelName = bustedwheel
@@ -100,14 +98,12 @@
 	{
 		name = KSPWheelSuspension
 		suspensionName = suspensionPivot
-		wheelColliderName = WheelCollider
 		suspensionOffset = -0.24
 		suspensionAxis = 0, 1, 0
 	}
 	MODULE
 	{
 		name = KSPWheelSteering
-		wheelColliderName = WheelCollider
 		steeringName = SteeringPivot
 		maxSteeringAngle = 30
 		steeringAxis = 0, 1, 0
@@ -116,7 +112,6 @@
 	MODULE
 	{
 		name = KSPWheelMotor
-		wheelColliderName = WheelCollider
 		maxMotorTorque = 10
 		resourceAmount = 0.25
 		throttleResponse = 2
@@ -124,14 +119,12 @@
 	MODULE
 	{
 		name = KSPWheelBrakes
-		wheelColliderName = WheelCollider
 		maxBrakeTorque = 10
 		brakeResponse = 2
 	}
 	MODULE
 	{
 		name = KSPWheelDamage
-		wheelColliderName = WheelCollider
 		impactTolerance = 100
 		wheelName = wheel
 		bustedWheelName = wheelDamaged
@@ -139,423 +132,125 @@
 }
 
 roverWheelTR-2L - truck wheels
-// +PART[wheelMed]
-// {
-	// @name = KSPWheel-wheelMed
-	// @title = KSPWheel-wheelMed
-	// -MODULE[ModuleWheelBase]{}
-	// -MODULE[ModuleWheelSuspension]{}
-	// -MODULE[ModuleWheelSteering]{}
-	// -MODULE[ModuleWheelMotor]{}
-	// -MODULE[ModuleWheelBrakes]{}
-	// -MODULE[ModuleWheelDamage]{}
-	
-	// MODULE
-	// {
-		// name = KSPWheelModule
-		// wheelPivotName = WheelPivot
-		// wheelName = wheel
-		// bustedWheelName = bustedwheel
-		// wheelRadius = 0.58
-		// wheelMass = 0.040
-		// suspensionTravel = 0.125
-		// suspensionTarget = 0.5
-		// suspensionOffset = 0
-		// suspensionSpring = 100
-		// suspensionDamper = 20
-		// maxSteeringAngle = 30
-		// maxMotorTorque = 58
-		// maxBrakeTorque = 12
-		// resourceAmount = 0.25	
-	// }
-	
-	// MODULE
-	// {
-		// name = KSPWheelBase
-		// wheelColliderName = WheelCollider
-		// wheelColliderOffset = 0.125
-		// wheelPivotName = WheelPivot
-		// wheelPivotAxis = 1, 0, 0
-		// wheelRadius = 0.47375
-		// wheelMass = 0.40
-		// suspensionTravel = 0.3
-		// suspensionTarget = 0.5
-		// suspensionSpring = 100
-		// suspensionDamper = 20
-		// loadRating = 1.25
-		// minLoadRating = 0.1
-		// maxLoadRating = 2
-	// }
-	// MODULE
-	// {
-		// name = KSPWheelSuspension
-		// suspensionName = SuspensionPivot
-		// wheelColliderName = WheelCollider
-		// suspensionOffset = -0.18
-		// suspensionAxis = 0, 1, 0
-	// }
-	// MODULE
-	// {
-		// name = KSPWheelSteering
-		// wheelColliderName = WheelCollider
-		// steeringName = SteeringPivot
-		// maxSteeringAngle = 30
-		// steeringAxis = 0, 1, 0
-		// steeringResponse = 10
-	// }
-	// MODULE
-	// {
-		// name = KSPWheelMotor
-		// wheelColliderName = WheelCollider
-		// maxMotorTorque = 10
-		// resourceAmount = 0.25
-		// throttleResponse = 2
-	// }
-	// MODULE
-	// {
-		// name = KSPWheelBrakes
-		// wheelColliderName = WheelCollider
-		// maxBrakeTorque = 10
-		// brakeResponse = 2
-	// }
-	// MODULE
-	// {
-		// name = KSPWheelDamage
-		// wheelColliderName = WheelCollider
-		// impactTolerance = 100
-		// wheelName = wheel
-		// bustedWheelName = wheelDamaged
-	// }
-// }
++PART[wheelMed]
+{
+	@name = KSPWheel-wheelMed
+	@title = KSPWheel-wheelMed
+	-MODULE[ModuleWheelBase]{}
+	-MODULE[ModuleWheelSuspension]{}
+	-MODULE[ModuleWheelSteering]{}
+	-MODULE[ModuleWheelMotor]{}
+	-MODULE[ModuleWheelBrakes]{}
+	-MODULE[ModuleWheelDamage]{}
+		
+	MODULE
+	{
+		name = KSPWheelBase
+		wheelColliderName = WheelCollider
+		wheelColliderOffset = 0.125
+		wheelPivotName = WheelPivot
+		wheelPivotAxis = 1, 0, 0
+		wheelRadius = 0.58
+		wheelMass = 0.040
+		suspensionTravel = 0.125
+		suspensionTarget = 0.5
+		suspensionSpring = 100
+		suspensionDamper = 20
+		loadRating = 1.5
+		minLoadRating = 0.25
+		maxLoadRating = 3
+	}
+	MODULE
+	{
+		name = KSPWheelSuspension
+		suspensionName = SuspensionPivot
+		suspensionOffset = -0.18
+		suspensionAxis = 0, 1, 0
+	}
+	MODULE
+	{
+		name = KSPWheelSteering
+		steeringName = SteeringPivot
+		maxSteeringAngle = 30
+		steeringAxis = 0, 1, 0
+		steeringResponse = 10
+	}
+	MODULE
+	{
+		name = KSPWheelMotor
+		maxMotorTorque = 58
+		resourceAmount = 0.25
+		throttleResponse = 2
+	}
+	MODULE
+	{
+		name = KSPWheelBrakes
+		maxBrakeTorque = 12
+		brakeResponse = 2
+	}
+	MODULE
+	{
+		name = KSPWheelDamage
+		impactTolerance = 100
+		wheelName = wheel
+		bustedWheelName = bustedwheel
+	}
+}
 
 //roverWheelXL3 - giant tank-steering wheels
-@PART[roverWheel3]
++PART[roverWheel3]
 {
+	@name = KSPWheel-roverWheel3
+	@title = KSPWheel-roverWheel3
 	-MODULE[ModuleWheelBase]{}
 	-MODULE[ModuleWheelSuspension]{}
 	-MODULE[ModuleWheelMotorSteering]{}
 	-MODULE[ModuleWheelBrakes]{}
 	-MODULE[ModuleWheelDamage]{}
+	
 	MODULE
 	{
-		name = KSPWheelModule
+		name = KSPWheelBase
 		wheelColliderName = WheelCollider
-		wheelColliderOffset = 0.25
-		suspensionName = SuspensionPivot
-		suspensionExtPos = -0.662
+		wheelColliderOffset = 0.125
 		wheelPivotName = WheelPivot
-		wheelName = wheel
-		bustedWheelName = bustedwheel
+		wheelPivotAxis = 1, 0, 0
 		wheelRadius = 1
 		wheelMass = 0.8
 		suspensionTravel = 0.25
 		suspensionTarget = 0.5
-		suspensionOffset = 0
 		suspensionSpring = 400
 		suspensionDamper = 80
-		maxSteeringAngle = 0
+		loadRating = 4
+		minLoadRating = 0.5
+		maxLoadRating = 10
+	}
+	MODULE
+	{
+		name = KSPWheelSuspension
+		suspensionName = SuspensionPivot
+		suspensionOffset = 0
+		suspensionAxis = 0, 1, 0
+	}
+	MODULE
+	{
+		name = KSPWheelMotor
 		tankSteering = true
 		maxMotorTorque = 50
-		maxBrakeTorque = 40
 		resourceAmount = 0.25
+		throttleResponse = 2
 	}
-}
-
-//LY-01 Fixed Landing Gear
-@PART[GearFixed]
-{
-	-MODULE[ModuleWheelBase]{}
-	-MODULE[ModuleWheelSuspension]{}
-	-MODULE[ModuleWheelBrakes]{}
-	-MODULE[ModuleWheelDamage]{}
 	MODULE
 	{
-		name = KSPWheelModule
-		wheelColliderName = WheelCollider
-		wheelColliderOffset = 0.065
-		wheelPivotName = WheelPivot
-		suspensionExtPos = -0.7
-		wheelRadius = 0.2
-		wheelMass = 0.04
-		suspensionTravel = 0.09
-		suspensionTarget = 0.2
-		suspensionOffset = 0
-		suspensionSpring = 250
-		suspensionDamper = 50
-		maxSteeringAngle = 0
-		maxMotorTorque = 0
-		maxBrakeTorque = 12		
+		name = KSPWheelBrakes
+		maxBrakeTorque = 40
+		brakeResponse = 2
 	}
-}
-
-//LY-05 Steerable Landing Gear
-@PART[GearFree]
-{
-	-MODULE[ModuleWheelBase]{}
-	-MODULE[ModuleWheelSuspension]{}
-	-MODULE[ModuleWheelSteering]{}
-	-MODULE[ModuleWheelDamage]{}
 	MODULE
 	{
-		name = KSPWheelModule
-		wheelColliderName = WheelCollider
-		wheelColliderOffset = -0.075
-		suspensionName = suspension
-		suspensionExtPos = -0.414
-		steeringName = SteeringPivot
-		wheelPivotName = wheel
-		wheelRadius = 0.198
-		wheelMass = 0.04
-		suspensionTravel = 0.05
-		suspensionTarget = 0.2
-		suspensionOffset = 0
-		suspensionSpring = 250
-		suspensionDamper = 50
-		maxSteeringAngle = 20
-		maxMotorTorque = 0
-		maxBrakeTorque = 12		
-	}
-}
-
-//this is actually the 'small' gear
-@PART[SmallGearBay]
-{
-	-MODULE[ModuleWheelBase]{}
-	-MODULE[ModuleWheelSuspension]{}
-	-MODULE[ModuleWheelSteering]{}
-	-MODULE[ModuleWheelBrakes]{}
-	-MODULE[ModuleWheelDeployment]{}
-	-MODULE[ModuleWheelDamage]{}
-	MODULE
-	{
-		name = KSPWheelModule
-		animationName = LandingGearSmallDeploy
-		wheelColliderOffset = 0.12
-		wheelColliderName = WheelCollider
-		suspensionName = SuspensionPivot
-		suspensionExtPos = 0.92507
-		suspensionAxis = 0,0,-1
-		steeringName = SteeringPivot
-		wheelPivotName = WheelPivot
-		wheelRadius = 0.18
-		wheelMass = 0.04
-		suspensionTravel = 0.12
-		suspensionTarget = 0.2
-		suspensionOffset = 0
-		suspensionSpring = 100
-		suspensionDamper = 20
-		maxSteeringAngle = 25
-		maxMotorTorque = 0
-		maxBrakeTorque = 12
-	}
-}
-
-//this is actually the 'medium' gear
-@PART[GearSmall]
-{
-	-MODULE[ModuleWheelBase]{}
-	-MODULE[ModuleWheelSuspension]{}
-	-MODULE[ModuleWheelSteering]{}
-	-MODULE[ModuleWheelDeployment]{}
-	-MODULE[ModuleWheelBrakes]{}
-	-MODULE[ModuleWheelDamage]{}
-	MODULE
-	{
-		name = KSPWheelModule
-		animationName = LandingGearMediumDeploy
-		wheelColliderName = WheelCollider
-		wheelColliderOffset = 0.2
-		suspensionName = SuspensionPivot
-		suspensionExtPos = 1.18750
-		suspensionAxis = 0,0,-1		
-		steeringName = SteeringPivot
-		wheelPivotName = WheelPivot
-		wheelRadius = 0.2375
-		wheelMass = 0.04
-		suspensionTravel = 0.2
-		suspensionTarget = 0.2
-		suspensionOffset = 0
-		suspensionSpring = 400
-		suspensionDamper = 80
-		maxSteeringAngle = 25
-		maxMotorTorque = 0
-		maxBrakeTorque = 12
-	}
-}
-
-//this is actually the 'large' gear
-@PART[GearMedium]
-{
-	-MODULE[ModuleWheelBase]{}
-	-MODULE[ModuleWheelSuspension]{}
-	-MODULE[ModuleWheelBrakes]{}
-	-MODULE[ModuleWheelDeployment]{}
-	-MODULE[ModuleWheelBogey]{}
-	-MODULE[ModuleWheelDamage]{}
-	MODULE
-	{
-		name = KSPWheelModule
-		animationName = LandingGearLargeDeploy
-		wheelColliderName = WheelCollider
-		wheelColliderOffset = -0.277
-		suspensionName = SuspensionPivot
-		suspensionExtPos = -1.51450
-		wheelPivotName = wheels1, wheels2
-		wheelRadius = 0.3
-		wheelMass = 0.04
-		suspensionTravel = 0.25
-		suspensionTarget = 0.2
-		suspensionOffset = 0
-		suspensionSpring = 400
-		suspensionDamper = 40
-		maxSteeringAngle = 0
-		maxMotorTorque = 0
-		maxBrakeTorque = 12		
-	}
-}
-
-//this is actually the 'extra-large' gear
-@PART[GearLarge]
-{
-	-MODULE[ModuleWheelBase]{}
-	-MODULE[ModuleWheelSuspension]{}
-	-MODULE[ModuleWheelBrakes]{}
-	-MODULE[ModuleWheelDeployment]{}
-	-MODULE[ModuleWheelBogey]{}
-	-MODULE[ModuleWheelDamage]{}
-	MODULE
-	{
-		name = KSPWheelModule
-		animationName = LandingGearExtraLargeDeploy2
-		wheelColliderName = WheelCollider
-		wheelColliderOffset = 0
-		suspensionName = SuspensionPivot
-		suspensionExtPos = -2.2625
-		wheelPivotName = wheels1, wheels2
-		wheelRadius = 0.3
-		wheelMass = 0.04
-		suspensionTravel = 0.527
-		suspensionTarget = 0.2
-		suspensionOffset = 0
-		suspensionSpring = 400
-		suspensionDamper = 40
-		maxSteeringAngle = 0
-		maxMotorTorque = 0
-		maxBrakeTorque = 12		
-	}
-}
-
-//LT-05 -- 'micro'
-@PART[miniLandingLeg]
-{
-	-MODULE[ModuleWheelBase]{}
-	-MODULE[ModuleWheelSuspension]{}
-	-MODULE[ModuleWheelDeployment]{}
-	-MODULE[ModuleWheelLock]{}
-	-MODULE[ModuleWheelDamage]{}
-	MODULE
-	{
-		name = KSPWheelModule
-		animationName = probeleg
-		wheelColliderName = wheelCollider
-		wheelColliderOffset = 0
-		suspensionName = leg
-		suspensionExtPos = 0.00601
-		suspensionAxis = 0,0,-1
-		wheelRadius = 0.1
-		wheelMass = 0.04
-		suspensionTravel = 0.75
-		suspensionTarget = 0.2
-		suspensionOffset = 0
-		suspensionSpring = 100
-		suspensionDamper = 20
-		maxSteeringAngle = 0
-		maxMotorTorque = 0
-		maxBrakeTorque = 300
-		brakesLocked = true
-		
-		loadRating = 0.5
-		minLoadRating = 0.1
-		maxLoadRating = 1
-	}
-}
-
-//LT-01 -- 'medium'
-@PART[landingLeg1]
-{
-	-MODULE[ModuleWheelBase]{}
-	-MODULE[ModuleWheelSuspension]{}
-	-MODULE[ModuleWheelDeployment]{}
-	-MODULE[ModuleWheelLock]{}
-	-MODULE[ModuleWheelBogey]{}
-	-MODULE[ModuleWheelDamage]{}
-	MODULE
-	{
-		name = KSPWheelModule
-		animationName = Deploy
-		wheelColliderName = wheelCollider
-		wheelColliderOffset = -0.05
-		suspensionName = Piston
-		suspensionExtPos = -0.77182
-		suspensionAxis = 0,0,1
-		wheelRadius = 0.104
-		wheelMass = 0.04
-		suspensionTravel = 0.90
-		suspensionTarget = 0.2
-		suspensionOffset = 0
-		suspensionSpring = 100
-		suspensionDamper = 20
-		maxSteeringAngle = 0
-		maxMotorTorque = 0
-		maxBrakeTorque = 300
-		brakesLocked = true
-		bogeyName = foot
-		bogeyRotAxis = 1, 0, 0
-		bogeyUpAxis = 0, -1, 0
-		
-		loadRating = 1.5
-		minLoadRating = 0.5
-		maxLoadRating = 5
-	}
-}
-
-//no 'scale' listed, default=1?
-//has rescaleFactor = 1.25
-//LT-02 -- 'large'
-@PART[landingLeg1-2]
-{
-	-MODULE[ModuleWheelBase]{}
-	-MODULE[ModuleWheelSuspension]{}
-	-MODULE[ModuleWheelDeployment]{}
-	-MODULE[ModuleWheelLock]{}
-	-MODULE[ModuleWheelBogey]{}
-	-MODULE[ModuleWheelDamage]{}
-	MODULE
-	{
-		name = KSPWheelModule
-		animationName = newlandingleg
-		wheelColliderName = wheelCollider
-		wheelColliderOffset = 0
-		suspensionName = piston
-		suspensionExtPos = 0.53906
-		suspensionAxis = 0,0,-1
-		wheelRadius = 0.15
-		wheelMass = 0.04
-		suspensionTravel = 0.9
-		suspensionTarget = 0.2
-		suspensionOffset = 0
-		suspensionSpring = 100
-		suspensionDamper = 20
-		maxSteeringAngle = 0
-		maxMotorTorque = 0
-		maxBrakeTorque = 300
-		brakesLocked = true
-		bogeyName = foot
-		bogeyRotAxis = 1, 0, 0
-		bogeyUpAxis = 0, -1, 0
-		
-		loadRating = 2.5
-		minLoadRating = 1.0
-		maxLoadRating = 8.0
+		name = KSPWheelDamage
+		impactTolerance = 100
+		wheelName = wheel
+		bustedWheelName = bustedwheel
 	}
 }
