More prep and cleanup work, will resume later this evening.

--- a/GameData/KSPWheel/Patches/gearPatch.cfg
+++ b/GameData/KSPWheel/Patches/gearPatch.cfg
@@ -1,6 +1,8 @@
 //LY-01 Fixed Landing Gear
-@PART[GearFixed]
++PART[GearFixed]
 {
+	@name = KSPW-GearFixed
+	@title = KSPWheels GearFixed
 	-MODULE[ModuleWheelBase]{}
 	-MODULE[ModuleWheelSuspension]{}
 	-MODULE[ModuleWheelBrakes]{}
@@ -46,8 +48,10 @@
 }
 
 //LY-05 Steerable Landing Gear
-@PART[GearFree]
++PART[GearFree]
 {
+	@name = KSPW-GearFree
+	@title = KSPWheels GearFree
 	-MODULE[ModuleWheelBase]{}
 	-MODULE[ModuleWheelSuspension]{}
 	-MODULE[ModuleWheelSteering]{}
@@ -102,8 +106,10 @@
 }
 
 //this is actually the 'small' gear
-@PART[SmallGearBay]
++PART[SmallGearBay]
 {
+	@name = KSPW-SmallGearBay
+	@title = KSPWheels SmallGearBay
 	-MODULE[ModuleWheelBase]{}
 	-MODULE[ModuleWheelSuspension]{}
 	-MODULE[ModuleWheelSteering]{}
@@ -161,8 +167,10 @@
 }
 
 //this is actually the 'medium' gear
-@PART[GearSmall]
++PART[GearSmall]
 {
+	@name = KSPW-GearSmall
+	@title = KSPWheels GearSmall
 	-MODULE[ModuleWheelBase]{}
 	-MODULE[ModuleWheelSuspension]{}
 	-MODULE[ModuleWheelSteering]{}
@@ -220,8 +228,10 @@
 }
 
 //this is actually the 'large' gear
-@PART[GearMedium]
++PART[GearMedium]
 {
+	@name = KSPW-GearMedium
+	@title = KSPWheels GearMedium
 	-MODULE[ModuleWheelBase]{}
 	-MODULE[ModuleWheelSuspension]{}
 	-MODULE[ModuleWheelBrakes]{}
@@ -276,8 +286,10 @@
 }
 
 //this is actually the 'extra-large' gear
-@PART[GearLarge]
++PART[GearLarge]
 {
+	@name = KSPW-GearLarge
+	@title = KSPWheels GearLarge
 	-MODULE[ModuleWheelBase]{}
 	-MODULE[ModuleWheelSuspension]{}
 	-MODULE[ModuleWheelBrakes]{}
