--- a/GameData/KSPWheel/Patches/legsPatch.cfg
+++ b/GameData/KSPWheel/Patches/legsPatch.cfg
@@ -1,6 +1,8 @@
 //LT-05 -- 'micro'
-@PART[miniLandingLeg]
++PART[miniLandingLeg]
 {
+	@name = KSPW-miniLandingLeg
+	@title = KSPWheels miniLandingLeg
 	-MODULE[ModuleWheelBase]{}
 	-MODULE[ModuleWheelSuspension]{}
 	-MODULE[ModuleWheelDeployment]{}
@@ -52,8 +54,10 @@
 }
 
 //LT-01 -- 'medium'
-@PART[landingLeg1]
++PART[landingLeg1]
 {
+	@name = KSPW-landingLeg1
+	@title = KSPWheels landingLeg1
 	-MODULE[ModuleWheelBase]{}
 	-MODULE[ModuleWheelSuspension]{}
 	-MODULE[ModuleWheelDeployment]{}
@@ -115,8 +119,10 @@
 //no 'scale' listed, default=1?
 //has rescaleFactor = 1.25
 //LT-02 -- 'large'
-@PART[landingLeg1-2]
++PART[landingLeg1-2]
 {
+	@name = KSPW-landingLeg1-2
+	@title = KSPWheels landingLeg1-2
 	-MODULE[ModuleWheelBase]{}
 	-MODULE[ModuleWheelSuspension]{}
 	-MODULE[ModuleWheelDeployment]{}
