minor cleanup; stash prior to testing some concepts

--- a/GameData/KSPWheel/Parts/LandingGear/SC-GEN-LG-A.cfg
+++ b/GameData/KSPWheel/Parts/LandingGear/SC-GEN-LG-A.cfg
@@ -41,22 +41,25 @@ MODULE
 {
 	name = KSPWheelBase
 	wheelColliderName = SC-GEN-LG-A-WheelCollider
-	wheelColliderOffset = 0.2
+	wheelColliderOffset = 0
 	wheelPivotName = SC-GEN-LG-A-WheelMesh
 	wheelPivotAxis = 1, 0, 0
 	wheelRadius = 0.3625
 	wheelMass = 0.150
 	suspensionTravel = 0.25
-	suspensionTarget = 0.2
-	suspensionSpring = 1500
-	suspensionDamper = 250
+	suspensionTarget = 0.5
+	suspensionSpring = 1000
+	suspensionDamper = 150
+	loadRating = 12
+	minLoadRating = 1
+	maxLoadRating = 20
 }
 MODULE
 {
 	name = KSPWheelSuspension
 	suspensionName = SC-GEN-LG-A-Suspension
-	suspensionOffset = 0
-	suspensionAxis = 0,0,-1
+	suspensionOffset = -0.25
+	suspensionAxis = 0,1,0
 }
 // MODULE
 // {
