--- a/GameData/KSPWheel/Parts/LandingGear/SC-GEN-LG-B.cfg
+++ b/GameData/KSPWheel/Parts/LandingGear/SC-GEN-LG-B.cfg
@@ -41,22 +41,25 @@ MODULE
 {
 	name = KSPWheelBase
 	wheelColliderName = SC-GEN-LG-B-WheelCollider
-	wheelColliderOffset = 0.2
+	wheelColliderOffset = 0
 	wheelPivotName = SC-GEN-LG-B-WheelMesh
 	wheelPivotAxis = 1, 0, 0
 	wheelRadius = 0.26
 	wheelMass = 0.150
 	suspensionTravel = 0.3
-	suspensionTarget = 0.2
+	suspensionTarget = 0.5
 	suspensionSpring = 800
-	suspensionDamper = 150
+	suspensionDamper = 125
+	loadRating = 6
+	minLoadRating = 1
+	maxLoadRating = 12
 }
 MODULE
 {
 	name = KSPWheelSuspension
 	suspensionName = SC-GEN-LG-B-Suspension
-	suspensionOffset = 0
-	suspensionAxis = 0,0,-1
+	suspensionOffset = -0.3
+	suspensionAxis = 0,1,0
 }
 MODULE
 {
