update part configs to newest standards update repo readme

--- a/GameData/KSPWheel/Patches/gearPatch.cfg
+++ b/GameData/KSPWheel/Patches/gearPatch.cfg
@@ -19,15 +19,16 @@
 		wheelMass = 0.04
 		suspensionTravel = 0.09
 		suspensionTarget = 0.2
-		suspensionSpring = 250
-		suspensionDamper = 50
+		loadRating = 2
+		minLoadRating = 0.25
+		maxLoadRating = 5
 	}
 	MODULE
 	{
 		name = KSPWheelSuspension
-		suspensionName = SuspensionPivot
+		suspensionName = WheelPivot
 		wheelColliderName = WheelCollider
-		suspensionOffset = -0.18
+		suspensionOffset = 0
 		suspensionAxis = 0, 1, 0
 	}
 	MODULE
@@ -44,6 +45,10 @@
 		impactTolerance = 100
 		wheelName = wheel
 		bustedWheelName = bustedwheel
+	}
+	MODULE
+	{
+		name = KSPWheelDebug
 	}
 }
 
@@ -68,8 +73,9 @@
 		wheelMass = 0.04
 		suspensionTravel = 0.05
 		suspensionTarget = 0.2
-		suspensionSpring = 250
-		suspensionDamper = 50
+		loadRating = 1
+		minLoadRating = 0.25
+		maxLoadRating = 5
 	}
 	MODULE
 	{
@@ -103,6 +109,10 @@
 		wheelName = wheel
 		bustedWheelName = bustedwheel
 	}
+	MODULE
+	{
+		name = KSPWheelDebug
+	}
 }
 
 //this is actually the 'small' gear
@@ -125,18 +135,19 @@
 		wheelPivotName = WheelPivot
 		wheelPivotAxis = 1, 0, 0
 		wheelRadius = 0.18
-		wheelMass = 0.04
+		wheelMass = 0.1
 		suspensionTravel = 0.12
 		suspensionTarget = 0.2
-		suspensionSpring = 100
-		suspensionDamper = 20
+		loadRating = 2.5
+		minLoadRating = 0.5
+		maxLoadRating = 8
 	}
 	MODULE
 	{
 		name = KSPWheelSuspension
 		suspensionName = SuspensionPivot
-		suspensionOffset = 0
-		suspensionAxis = 0,0,-1
+		suspensionOffset = -0.10
+		suspensionAxis = 0,1,0
 	}
 	MODULE
 	{
@@ -156,6 +167,8 @@
 	{
 		name = KSPWheelDeployment
 		animationName = LandingGearSmallDeploy
+		tempColliderName = deployTgt
+		tempColliderOffset = -0.10
 	}
 	MODULE
 	{
@@ -163,6 +176,10 @@
 		impactTolerance = 100
 		wheelName = wheel
 		bustedWheelName = bustedwheel
+	}
+	MODULE
+	{
+		name = KSPWheelDebug
 	}
 }
 
@@ -186,18 +203,19 @@
 		wheelPivotName = WheelPivot
 		wheelPivotAxis = 1, 0, 0
 		wheelRadius = 0.2375
-		wheelMass = 0.04
+		wheelMass = 0.15
 		suspensionTravel = 0.2
 		suspensionTarget = 0.2
-		suspensionSpring = 400
-		suspensionDamper = 80
+		loadRating = 5
+		minLoadRating = 1
+		maxLoadRating = 10
 	}
 	MODULE
 	{
 		name = KSPWheelSuspension
 		suspensionName = SuspensionPivot
-		suspensionOffset = 0
-		suspensionAxis = 0,0,-1
+		suspensionOffset = -0.1875
+		suspensionAxis = 0,1,0
 	}
 	MODULE
 	{
@@ -217,6 +235,8 @@
 	{
 		name = KSPWheelDeployment
 		animationName = LandingGearMediumDeploy
+		tempColliderName = deployTgt
+		tempColliderOffset = 0.275
 	}
 	MODULE
 	{
@@ -224,6 +244,10 @@
 		impactTolerance = 100
 		wheelName = wheel
 		bustedWheelName = bustedwheel
+	}
+	MODULE
+	{
+		name = KSPWheelDebug
 	}
 }
 
@@ -247,18 +271,19 @@
 		wheelPivotName = wheels1, wheels2
 		wheelPivotAxis = 1, 0, 0
 		wheelRadius = 0.3
-		wheelMass = 0.04
+		wheelMass = 0.2
 		suspensionTravel = 0.25
 		suspensionTarget = 0.2
-		suspensionSpring = 400
-		suspensionDamper = 40
+		loadRating = 8
+		minLoadRating = 2
+		maxLoadRating = 20
 	}
 	MODULE
 	{
 		name = KSPWheelSuspension
 		suspensionName = SuspensionPivot
-		suspensionOffset = 0
-		suspensionAxis = 0,0,-1
+		suspensionOffset = -0.25
+		suspensionAxis = 0,1,0
 	}
 	MODULE
 	{
@@ -270,11 +295,17 @@
 	{
 		name = KSPWheelDeployment
 		animationName = LandingGearLargeDeploy
+		tempColliderName = deployTgt
+		tempColliderOffset = -0.25
 	}
 	MODULE
 	{
 		name = KSPWheelBogey
-		//TODO
+		bogeyName = WheelBogey
+		bogeyRotAxis = 1, 0, 0
+		bogeyUpAxis = 0, 1, 0
+		bogeyFwdAxis = 0, 0, 1
+		restingRotation = -25
 	}
 	MODULE
 	{
@@ -282,6 +313,10 @@
 		impactTolerance = 100
 		wheelName = wheel
 		bustedWheelName = bustedwheel
+	}
+	MODULE
+	{
+		name = KSPWheelDebug
 	}
 }
 
@@ -305,18 +340,19 @@
 		wheelPivotName = wheels1, wheels2
 		wheelPivotAxis = 1, 0, 0
 		wheelRadius = 0.3
-		wheelMass = 0.04
+		wheelMass = 0.3
 		suspensionTravel = 0.527
 		suspensionTarget = 0.2
-		suspensionSpring = 400
-		suspensionDamper = 40
+		loadRating = 8
+		minLoadRating = 2
+		maxLoadRating = 20
 	}
 	MODULE
 	{
 		name = KSPWheelSuspension
 		suspensionName = SuspensionPivot
-		suspensionOffset = 0
-		suspensionAxis = 0,0,-1
+		suspensionOffset = -0.50
+		suspensionAxis = 0,1,0
 	}
 	MODULE
 	{
@@ -328,11 +364,17 @@
 	{
 		name = KSPWheelDeployment
 		animationName = LandingGearExtraLargeDeploy2
+		tempColliderName = deployTgt
+		tempColliderOffset = 0
 	}
 	MODULE
 	{
 		name = KSPWheelBogey
-		//TODO
+		bogeyName = WheelBogey
+		bogeyRotAxis = 1, 0, 0
+		bogeyUpAxis = 0, 1, 0
+		bogeyFwdAxis = 0, 0, 1
+		restingRotation = -25
 	}
 	MODULE
 	{
@@ -340,5 +382,9 @@
 		impactTolerance = 100
 		wheelName = wheel
 		bustedWheelName = bustedwheel
+	}
+	MODULE
+	{
+		name = KSPWheelDebug
 	}
 }
