--- a/GameData/KSPWheel/Patches/legsPatch.cfg
+++ b/GameData/KSPWheel/Patches/legsPatch.cfg
@@ -27,10 +27,9 @@
 	MODULE
 	{
 		name = KSPWheelSuspension
-		suspensionName = SuspensionPivot
 		suspensionName = leg
-		suspensionOffset = 0
-		suspensionAxis = 0, 1, 0
+		suspensionOffset = -0.1375
+		suspensionAxis = 0, 0, -1
 	}
 	MODULE
 	{
@@ -50,6 +49,10 @@
 		impactTolerance = 100
 		wheelName = wheel
 		bustedWheelName = bustedwheel
+	}
+	MODULE
+	{
+		name = KSPWheelDebug
 	}
 }
 
@@ -84,8 +87,7 @@
 	{
 		name = KSPWheelSuspension
 		suspensionName = Piston
-		suspensionName = leg
-		suspensionOffset = 0
+		suspensionOffset = -0.1
 		suspensionAxis = 0, 0, 1
 	}
 	MODULE
@@ -114,6 +116,10 @@
 		bogeyRotAxis = 1, 0, 0
 		bogeyUpAxis = 0, -1, 0
 	}
+	MODULE
+	{
+		name = KSPWheelDebug
+	}
 }
 
 //no 'scale' listed, default=1?
@@ -141,16 +147,15 @@
 		suspensionTarget = 0.2
 		suspensionSpring = 100
 		suspensionDamper = 20
-		loadRating = 2.5
+		loadRating = 5
 		minLoadRating = 1.0
-		maxLoadRating = 8.0
+		maxLoadRating = 12.0
 	}
 	MODULE
 	{
 		name = KSPWheelSuspension
 		suspensionName = piston
-		suspensionName = leg
-		suspensionOffset = 0
+		suspensionOffset = -0.3375
 		suspensionAxis = 0, 0, -1
 	}
 	MODULE
@@ -178,5 +183,9 @@
 		bogeyName = foot
 		bogeyRotAxis = 1, 0, 0
 		bogeyUpAxis = 0, -1, 0
+	}
+	MODULE
+	{
+		name = KSPWheelDebug
 	}
 }
