--- a/GameData/KSPWheel/Patches/wheel1patch.cfg
+++ b/GameData/KSPWheel/Patches/wheel1patch.cfg
@@ -61,6 +61,10 @@
 		wheelName = wheel
 		bustedWheelName = bustedwheel
 	}
+	MODULE
+	{
+		name = KSPWheelDebug
+	}
 }
 
 //roverWheelM1 - the doughnut
@@ -98,7 +102,7 @@
 	{
 		name = KSPWheelSuspension
 		suspensionName = suspensionPivot
-		suspensionOffset = -0.24
+		suspensionOffset = -0.25
 		suspensionAxis = 0, 1, 0
 	}
 	MODULE
@@ -128,6 +132,10 @@
 		impactTolerance = 100
 		wheelName = wheel
 		bustedWheelName = wheelDamaged
+	}
+	MODULE
+	{
+		name = KSPWheelDebug
 	}
 }
 
@@ -195,6 +203,10 @@ roverWheelTR-2L - truck wheels
 		wheelName = wheel
 		bustedWheelName = bustedwheel
 	}
+	MODULE
+	{
+		name = KSPWheelDebug
+	}
 }
 
 //roverWheelXL3 - giant tank-steering wheels
@@ -252,5 +264,9 @@ roverWheelTR-2L - truck wheels
 		impactTolerance = 100
 		wheelName = wheel
 		bustedWheelName = bustedwheel
+	}
+	MODULE
+	{
+		name = KSPWheelDebug
 	}
 }
