--- a/VSProject/KSPWheel/KSPWheel.csproj
+++ b/VSProject/KSPWheel/KSPWheel.csproj
@@ -77,11 +77,11 @@
     <Compile Include="Component\KSPWheelConstraint.cs" />
     <Compile Include="Component\KSPWheelFrictionCurve.cs" />
     <Compile Include="Component\KSPWheelStickyConstraint.cs" />
-    <Compile Include="Component\LFWheelGrip.cs" />
     <Compile Include="PartModule\KSPWheelBase.cs" />
     <Compile Include="PartModule\KSPWheelBogey.cs" />
     <Compile Include="PartModule\KSPWheelBrakes.cs" />
     <Compile Include="PartModule\KSPWheelDamage.cs" />
+    <Compile Include="PartModule\KSPWheelDebug.cs" />
     <Compile Include="PartModule\KSPWheelDeployment.cs" />
     <Compile Include="PartModule\KSPWheelMotor.cs" />
     <Compile Include="PartModule\KSPWheelAnimationState.cs" />
