clean up bogey specification for legs

--- a/GameData/KSPWheel/Patches/legsPatch.cfg
+++ b/GameData/KSPWheel/Patches/legsPatch.cfg
@@ -87,7 +87,7 @@
 	{
 		name = KSPWheelSuspension
 		suspensionName = Piston
-		suspensionOffset = -0.1
+		suspensionOffset = 0
 		suspensionAxis = 0, 0, 1
 	}
 	MODULE
@@ -114,7 +114,8 @@
 		name = KSPWheelBogey
 		bogeyName = foot
 		bogeyRotAxis = 1, 0, 0
-		bogeyUpAxis = 0, -1, 0
+		rotationOffset = 180
+		restingRotation = 90
 	}
 	MODULE
 	{
@@ -155,7 +156,7 @@
 	{
 		name = KSPWheelSuspension
 		suspensionName = piston
-		suspensionOffset = -0.3375
+		suspensionOffset = -0.25
 		suspensionAxis = 0, 0, -1
 	}
 	MODULE
@@ -182,7 +183,8 @@
 		name = KSPWheelBogey
 		bogeyName = foot
 		bogeyRotAxis = 1, 0, 0
-		bogeyUpAxis = 0, -1, 0
+		rotationOffset = 90
+		restingRotation = 0
 	}
 	MODULE
 	{
