misc cleanup in base module; add handling of bounds collider

--- a/GameData/KSPWheel/Patches/legsPatch.cfg
+++ b/GameData/KSPWheel/Patches/legsPatch.cfg
@@ -30,6 +30,7 @@
 		suspensionName = leg
 		suspensionOffset = -0.1375
 		suspensionAxis = 0, 0, -1
+		allowLockedSuspension = true
 	}
 	MODULE
 	{
@@ -47,8 +48,6 @@
 	{
 		name = KSPWheelDamage
 		impactTolerance = 100
-		wheelName = wheel
-		bustedWheelName = bustedwheel
 	}
 	MODULE
 	{
@@ -89,6 +88,7 @@
 		suspensionName = Piston
 		suspensionOffset = 0
 		suspensionAxis = 0, 0, 1
+		allowLockedSuspension = true
 	}
 	MODULE
 	{
@@ -106,8 +106,6 @@
 	{
 		name = KSPWheelDamage
 		impactTolerance = 100
-		wheelName = wheel
-		bustedWheelName = bustedwheel
 	}
 	MODULE
 	{
@@ -158,6 +156,7 @@
 		suspensionName = piston
 		suspensionOffset = -0.25
 		suspensionAxis = 0, 0, -1
+		allowLockedSuspension = true
 	}
 	MODULE
 	{
@@ -175,8 +174,6 @@
 	{
 		name = KSPWheelDamage
 		impactTolerance = 100
-		wheelName = wheel
-		bustedWheelName = bustedwheel
 	}
 	MODULE
 	{
