update stock patches for rotation module

--- a/GameData/KSPWheel/Patches/gearPatch.cfg
+++ b/GameData/KSPWheel/Patches/gearPatch.cfg
@@ -13,8 +13,6 @@
 		name = KSPWheelBase
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0.065
-		wheelPivotName = WheelPivot
-		wheelPivotAxis = 1, 0, 0
 		wheelRadius = 0.2
 		wheelMass = 0.04
 		suspensionTravel = 0.09
@@ -22,6 +20,12 @@
 		loadRating = 2
 		minLoadRating = 0.25
 		maxLoadRating = 5
+	}
+	MODULE
+	{
+		name = KSPWheelRotation
+		wheelMeshName = WheelPivot
+		rotationAxis = 1,0,0
 	}
 	MODULE
 	{
@@ -67,8 +71,6 @@
 		name = KSPWheelBase
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = -0.075
-		wheelPivotName = wheel
-		wheelPivotAxis = 1, 0, 0
 		wheelRadius = 0.198
 		wheelMass = 0.04
 		suspensionTravel = 0.05
@@ -76,6 +78,12 @@
 		loadRating = 1
 		minLoadRating = 0.25
 		maxLoadRating = 5
+	}
+	MODULE
+	{
+		name = KSPWheelRotation
+		wheelMeshName = wheel
+		rotationAxis = 1,0,0
 	}
 	MODULE
 	{
@@ -132,8 +140,6 @@
 		name = KSPWheelBase
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0.12
-		wheelPivotName = WheelPivot
-		wheelPivotAxis = 1, 0, 0
 		wheelRadius = 0.18
 		wheelMass = 0.1
 		suspensionTravel = 0.12
@@ -141,6 +147,12 @@
 		loadRating = 2.5
 		minLoadRating = 0.5
 		maxLoadRating = 8
+	}
+	MODULE
+	{
+		name = KSPWheelRotation
+		wheelMeshName = WheelPivot
+		rotationAxis = 1,0,0
 	}
 	MODULE
 	{
@@ -200,8 +212,6 @@
 		name = KSPWheelBase
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0.2
-		wheelPivotName = WheelPivot
-		wheelPivotAxis = 1, 0, 0
 		wheelRadius = 0.2375
 		wheelMass = 0.15
 		suspensionTravel = 0.2
@@ -209,6 +219,12 @@
 		loadRating = 5
 		minLoadRating = 1
 		maxLoadRating = 10
+	}
+	MODULE
+	{
+		name = KSPWheelRotation
+		wheelMeshName = WheelPivot
+		rotationAxis = 1,0,0
 	}
 	MODULE
 	{
@@ -268,8 +284,6 @@
 		name = KSPWheelBase
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = -0.277
-		wheelPivotName = wheels1, wheels2
-		wheelPivotAxis = 1, 0, 0
 		wheelRadius = 0.3
 		wheelMass = 0.2
 		suspensionTravel = 0.25
@@ -277,6 +291,18 @@
 		loadRating = 8
 		minLoadRating = 2
 		maxLoadRating = 20
+	}
+	MODULE
+	{
+		name = KSPWheelRotation
+		wheelMeshName = wheels1
+		rotationAxis = 1,0,0
+	}
+	MODULE
+	{
+		name = KSPWheelRotation
+		wheelMeshName = wheels2
+		rotationAxis = 1,0,0
 	}
 	MODULE
 	{
@@ -337,8 +363,6 @@
 		name = KSPWheelBase
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0
-		wheelPivotName = wheels1, wheels2
-		wheelPivotAxis = 1, 0, 0
 		wheelRadius = 0.3
 		wheelMass = 0.3
 		suspensionTravel = 0.527
@@ -346,6 +370,24 @@
 		loadRating = 8
 		minLoadRating = 2
 		maxLoadRating = 20
+	}
+	MODULE
+	{
+		name = KSPWheelRotation
+		wheelMeshName = wheels1
+		rotationAxis = 1,0,0
+	}
+	MODULE
+	{
+		name = KSPWheelRotation
+		wheelMeshName = wheels2
+		rotationAxis = 1,0,0
+	}
+	MODULE
+	{
+		name = KSPWheelRotation
+		wheelMeshName = wheels3
+		rotationAxis = 1,0,0
 	}
 	MODULE
 	{
