--- a/GameData/KSPWheel/Patches/wheel1patch.cfg
+++ b/GameData/KSPWheel/Patches/wheel1patch.cfg
@@ -14,17 +14,19 @@
 		name = KSPWheelBase
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0.1939
-		wheelPivotName = WheelPivot
-		wheelPivotAxis = 1, 0, 0
 		wheelRadius = 0.1575
 		wheelMass = 0.040
 		suspensionTravel = 0.195
 		suspensionTarget = 0.5
-		suspensionSpring = 25
-		suspensionDamper = 4
 		loadRating = 0.1
 		minLoadRating = 0.01
 		maxLoadRating = 1
+	}
+	MODULE
+	{
+		name = KSPWheelRotation
+		wheelMeshName = WheelPivot
+		rotationAxis = 1,0,0
 	}
 	MODULE
 	{
@@ -86,17 +88,19 @@
 		name = KSPWheelBase
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0.25
-		wheelPivotName = WheelPivot
-		wheelPivotAxis = 1, 0, 0
 		wheelRadius = 0.47375
 		wheelMass = 0.40
 		suspensionTravel = 0.3
 		suspensionTarget = 0.5
-		suspensionSpring = 100
-		suspensionDamper = 20
 		loadRating = 1.25
 		minLoadRating = 0.1
 		maxLoadRating = 2
+	}
+	MODULE
+	{
+		name = KSPWheelRotation
+		wheelMeshName = WheelPivot
+		rotationAxis = 1,0,0
 	}
 	MODULE
 	{
@@ -156,17 +160,19 @@ roverWheelTR-2L - truck wheels
 		name = KSPWheelBase
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0.125
-		wheelPivotName = WheelPivot
-		wheelPivotAxis = 1, 0, 0
 		wheelRadius = 0.58
 		wheelMass = 0.040
 		suspensionTravel = 0.125
 		suspensionTarget = 0.5
-		suspensionSpring = 100
-		suspensionDamper = 20
 		loadRating = 1.5
 		minLoadRating = 0.25
 		maxLoadRating = 3
+	}
+	MODULE
+	{
+		name = KSPWheelRotation
+		wheelMeshName = WheelPivot
+		rotationAxis = 1,0,0
 	}
 	MODULE
 	{
@@ -225,17 +231,19 @@ roverWheelTR-2L - truck wheels
 		name = KSPWheelBase
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0.125
-		wheelPivotName = WheelPivot
-		wheelPivotAxis = 1, 0, 0
 		wheelRadius = 1
 		wheelMass = 0.8
 		suspensionTravel = 0.25
 		suspensionTarget = 0.5
-		suspensionSpring = 400
-		suspensionDamper = 80
 		loadRating = 4
 		minLoadRating = 0.5
 		maxLoadRating = 10
+	}
+	MODULE
+	{
+		name = KSPWheelRotation
+		wheelMeshName = WheelPivot
+		rotationAxis = 1,0,0
 	}
 	MODULE
 	{
