--- a/VSProject/KSPWheel/KSPWheel.csproj
+++ b/VSProject/KSPWheel/KSPWheel.csproj
@@ -85,10 +85,12 @@
     <Compile Include="PartModule\KSPWheelDeployment.cs" />
     <Compile Include="PartModule\KSPWheelMotor.cs" />
     <Compile Include="PartModule\KSPWheelAnimationState.cs" />
+    <Compile Include="PartModule\KSPWheelRotation.cs" />
     <Compile Include="PartModule\KSPWheelState.cs" />
     <Compile Include="PartModule\KSPWheelSteering.cs" />
     <Compile Include="PartModule\KSPWheelSubmodule.cs" />
     <Compile Include="PartModule\KSPWheelSuspension.cs" />
+    <Compile Include="PartModule\KSPWheelTracks.cs" />
     <Compile Include="PartModule\Utils.cs" />
     <Compile Include="PartModule\WheelAnimationHandler.cs" />
   </ItemGroup>
