start working on vessel-spawn height offset code; need to determine what reference frame, scale, etc is used for the calculation; appears to happen with vessel com at 0,0,0 in default orientation (y+=up)

--- a/GameData/KSPWheel/Patches/Stock/Stock-legs.cfg
+++ b/GameData/KSPWheel/Patches/Stock/Stock-legs.cfg
@@ -23,6 +23,7 @@
 		loadRating = 0.5
 		minLoadRating = 0.1
 		maxLoadRating = 1
+		groundHeightOffset = 0.875
 	}
 	MODULE
 	{
@@ -81,6 +82,7 @@
 		loadRating = 1.5
 		minLoadRating = 0.5
 		maxLoadRating = 5
+		groundHeightOffset = 1.5
 	}
 	MODULE
 	{
@@ -149,6 +151,7 @@
 		loadRating = 5
 		minLoadRating = 1.0
 		maxLoadRating = 12.0
+		groundHeightOffset = 1.675
 	}
 	MODULE
 	{
