--- a/GameData/KSPWheel/Patches/Stock/Stock-wheels.cfg
+++ b/GameData/KSPWheel/Patches/Stock/Stock-wheels.cfg
@@ -21,6 +21,7 @@
 		loadRating = 0.1
 		minLoadRating = 0.01
 		maxLoadRating = 1
+		groundHeightOffset = 0.175
 	}
 	MODULE
 	{
@@ -95,6 +96,7 @@
 		loadRating = 1.25
 		minLoadRating = 0.1
 		maxLoadRating = 2
+		groundHeightOffset = 0.34
 	}
 	MODULE
 	{
@@ -167,6 +169,7 @@ roverWheelTR-2L - truck wheels
 		loadRating = 1.5
 		minLoadRating = 0.25
 		maxLoadRating = 3
+		groundHeightOffset = 0.78
 	}
 	MODULE
 	{
@@ -238,6 +241,7 @@ roverWheelTR-2L - truck wheels
 		loadRating = 4
 		minLoadRating = 0.5
 		maxLoadRating = 10
+		groundHeightOffset = 1.75
 	}
 	MODULE
 	{
