add/update tweakscale support to kerbal-foundries parts add tweakscale support to stock duplicated parts

--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-Repulsor.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-Repulsor.cfg
@@ -6,6 +6,10 @@
 	-MODULE[TextureAnimateGeneric]{}
 	-MODULE[KFWheel]{}
 	-MODULE[KFDustFX]{}
+	@MODULE[TweakScale]
+	{
+		@type = KSPWheelRepulsor
+	}
 	
 	MODULE
 	{
