--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-Screw.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-Screw.cfg
@@ -8,6 +8,10 @@
 	-MODULE[ModulePropeller]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
+	@MODULE[TweakScale]
+	{
+		@type = KSPWheelTrackMedium
+	}
 	
 	MODULE
 	{
