--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-Skid.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-Skid.cfg
@@ -7,6 +7,10 @@
 	-MODULE[KFWheel]{}
 	-MODULE[KFWheel]{}
 	-MODULE[KFDustFX]{}
+	@MODULE[TweakScale]
+	{
+		@type = KSPWheelTrackMedium
+	}
 	
 	MODULE
 	{
