--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackMole.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackMole.cfg
@@ -12,6 +12,10 @@
 	-MODULE[ModulePropeller]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
+	@MODULE[TweakScale]
+	{
+		@type = KSPWheelTrackLarge
+	}
 	
 	MODULE
 	{
