--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSmall.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSmall.cfg
@@ -12,6 +12,10 @@
 	-MODULE[KFWheel]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
+	@MODULE[TweakScale]
+	{
+		@type = KSPWheelTrackSmall
+	}
 	
 	MODULE
 	{
