--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackTiny.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackTiny.cfg
@@ -9,6 +9,10 @@
 	-MODULE[KFWheel]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
+	@MODULE[TweakScale]
+	{
+		@type = KSPWheelTrackSmall
+	}
 	
 	MODULE
 	{
