--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelLarge.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelLarge.cfg
@@ -8,6 +8,10 @@
 	-MODULE[KFSuspension]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
+	@MODULE[TweakScale]
+	{
+		@type = KSPWheelLargeWheel
+	}
 	MODULE
 	{
 		name = KSPWheelBase
