--- a/GameData/KSPWheel/Patches/Stock/Stock-gear.cfg
+++ b/GameData/KSPWheel/Patches/Stock/Stock-gear.cfg
@@ -7,6 +7,12 @@
 	-MODULE[ModuleWheelSuspension]{}
 	-MODULE[ModuleWheelBrakes]{}
 	-MODULE[ModuleWheelDamage]{}
+	-MODULE[TweakScale]{}
+	MODULE[TweakScale]
+	{
+		name = TweakScale
+		type = KSPWheelSmallWheel
+	}
 	
 	MODULE
 	{
@@ -65,6 +71,12 @@
 	-MODULE[ModuleWheelSuspension]{}
 	-MODULE[ModuleWheelSteering]{}
 	-MODULE[ModuleWheelDamage]{}
+	-MODULE[TweakScale]{}
+	MODULE[TweakScale]
+	{
+		name = TweakScale
+		type = KSPWheelSmallWheel
+	}
 	
 	MODULE
 	{
@@ -134,6 +146,12 @@
 	-MODULE[ModuleWheelBrakes]{}
 	-MODULE[ModuleWheelDeployment]{}
 	-MODULE[ModuleWheelDamage]{}
+	-MODULE[TweakScale]{}
+	MODULE[TweakScale]
+	{
+		name = TweakScale
+		type = KSPWheelSmallWheel
+	}
 	
 	MODULE
 	{
@@ -206,6 +224,12 @@
 	-MODULE[ModuleWheelDeployment]{}
 	-MODULE[ModuleWheelBrakes]{}
 	-MODULE[ModuleWheelDamage]{}
+	-MODULE[TweakScale]{}
+	MODULE[TweakScale]
+	{
+		name = TweakScale
+		type = KSPWheelMediumWheel
+	}
 	
 	MODULE
 	{
@@ -278,6 +302,12 @@
 	-MODULE[ModuleWheelDeployment]{}
 	-MODULE[ModuleWheelBogey]{}
 	-MODULE[ModuleWheelDamage]{}
+	-MODULE[TweakScale]{}
+	MODULE[TweakScale]
+	{
+		name = TweakScale
+		type = KSPWheelMediumWheel
+	}
 	
 	MODULE
 	{
@@ -357,6 +387,12 @@
 	-MODULE[ModuleWheelDeployment]{}
 	-MODULE[ModuleWheelBogey]{}
 	-MODULE[ModuleWheelDamage]{}
+	-MODULE[TweakScale]{}
+	MODULE[TweakScale]
+	{
+		name = TweakScale
+		type = KSPWheelLargeWheel
+	}
 	
 	MODULE
 	{
