--- a/GameData/KSPWheel/Patches/Stock/Stock-legs.cfg
+++ b/GameData/KSPWheel/Patches/Stock/Stock-legs.cfg
@@ -8,6 +8,12 @@
 	-MODULE[ModuleWheelDeployment]{}
 	-MODULE[ModuleWheelLock]{}
 	-MODULE[ModuleWheelDamage]{}
+	-MODULE[TweakScale]{}
+	MODULE[TweakScale]
+	{
+		name = TweakScale
+		type = KSPWheelSmallWheel
+	}
 	
 	MODULE
 	{
@@ -67,6 +73,12 @@
 	-MODULE[ModuleWheelLock]{}
 	-MODULE[ModuleWheelBogey]{}
 	-MODULE[ModuleWheelDamage]{}
+	-MODULE[TweakScale]{}
+	MODULE[TweakScale]
+	{
+		name = TweakScale
+		type = KSPWheelMediumWheel
+	}
 	
 	MODULE
 	{
@@ -136,6 +148,12 @@
 	-MODULE[ModuleWheelLock]{}
 	-MODULE[ModuleWheelBogey]{}
 	-MODULE[ModuleWheelDamage]{}
+	-MODULE[TweakScale]{}
+	MODULE[TweakScale]
+	{
+		name = TweakScale
+		type = KSPWheelMediumWheel
+	}
 	
 	MODULE
 	{
