--- a/GameData/KSPWheel/Patches/Stock/Stock-wheels.cfg
+++ b/GameData/KSPWheel/Patches/Stock/Stock-wheels.cfg
@@ -9,6 +9,12 @@
 	-MODULE[ModuleWheelMotor]{}
 	-MODULE[ModuleWheelBrakes]{}
 	-MODULE[ModuleWheelDamage]{}
+	-MODULE[TweakScale]{}
+	MODULE[TweakScale]
+	{
+		name = TweakScale
+		type = KSPWheelSmallWheel
+	}
 	MODULE
 	{
 		name = KSPWheelBase
@@ -83,6 +89,12 @@
 	-MODULE[ModuleWheelMotor]{}
 	-MODULE[ModuleWheelBrakes]{}
 	-MODULE[ModuleWheelDamage]{}
+	-MODULE[TweakScale]{}
+	MODULE[TweakScale]
+	{
+		name = TweakScale
+		type = KSPWheelMediumWheel
+	}
 	// %rescaleFactor = 1
 	MODULE
 	{
@@ -156,6 +168,12 @@ roverWheelTR-2L - truck wheels
 	-MODULE[ModuleWheelMotor]{}
 	-MODULE[ModuleWheelBrakes]{}
 	-MODULE[ModuleWheelDamage]{}
+	-MODULE[TweakScale]{}
+	MODULE[TweakScale]
+	{
+		name = TweakScale
+		type = KSPWheelMediumWheel
+	}
 		
 	MODULE
 	{
@@ -228,6 +246,12 @@ roverWheelTR-2L - truck wheels
 	-MODULE[ModuleWheelMotorSteering]{}
 	-MODULE[ModuleWheelBrakes]{}
 	-MODULE[ModuleWheelDamage]{}
+	-MODULE[TweakScale]{}
+	MODULE[TweakScale]
+	{
+		name = TweakScale
+		type = KSPWheelLargeWheel
+	}
 	
 	MODULE
 	{
