--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-RepulsorSurface.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-RepulsorSurface.cfg
@@ -6,6 +6,10 @@
 	-MODULE[TextureAnimateGeneric]{}
 	-MODULE[KFWheel]{}
 	-MODULE[KFDustFX]{}
+	@MODULE[TweakScale]
+	{
+		@type = KSPWheelRepulsor
+	}
 	
 	MODULE
 	{
