--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackLong.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackLong.cfg
@@ -15,6 +15,10 @@
 	-MODULE[KFWheel]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
+	@MODULE[TweakScale]
+	{
+		@type = KSPWheelTrackMedium
+	}
 	
 	MODULE
 	{
