--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackMedium.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackMedium.cfg
@@ -11,6 +11,10 @@
 	-MODULE[KFWheel]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
+	@MODULE[TweakScale]
+	{
+		@type = KSPWheelTrackMedium
+	}
 	
 	MODULE
 	{
