--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSimple.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSimple.cfg
@@ -14,6 +14,10 @@
 	-MODULE[KFConstrain]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
+	@MODULE[TweakScale]
+	{
+		@type = KSPWheelTrackMedium
+	}
 		
 	MODULE
 	{
