--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSurface.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSurface.cfg
@@ -10,6 +10,10 @@
 	-MODULE[KFWheel]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
+	@MODULE[TweakScale]
+	{
+		@type = KSPWheelTrackSmall
+	}
 	
 	MODULE
 	{
