--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelTiny.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelTiny.cfg
@@ -10,6 +10,10 @@
 	-MODULE[KFSuspension]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
+	@MODULE[TweakScale]
+	{
+		@type = KSPWheelSmallWheel
+	}
 	MODULE
 	{
 		name = KSPWheelBase
