add load-share setup to track wheels

--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-Screw.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-Screw.cfg
@@ -22,6 +22,7 @@
 			radius = 0.1
 			mass = 0.04
 			travel = 0.05
+			load = 0.25
 		}
 		WHEEL
 		{
@@ -29,6 +30,7 @@
 			radius = 0.25
 			mass = 0.04
 			travel = 0.15
+			load = 0.25
 		}
 		WHEEL
 		{
@@ -36,6 +38,7 @@
 			radius = 0.375
 			mass = 0.04
 			travel = 0.15
+			load = 0.35
 		}
 		WHEEL
 		{
@@ -43,6 +46,7 @@
 			radius = 0.375
 			mass = 0.04
 			travel = 0.15
+			load = 0.35
 		}
 		WHEEL
 		{
@@ -50,6 +54,7 @@
 			radius = 0.375
 			mass = 0.04
 			travel = 0.15
+			load = 0.35
 		}
 		WHEEL
 		{
@@ -57,6 +62,7 @@
 			radius = 0.25
 			mass = 0.04
 			travel = 0.15
+			load = 0.25
 		}
 		WHEEL
 		{
@@ -64,6 +70,7 @@
 			radius = 0.1
 			mass = 0.04
 			travel = 0.05
+			load = 0.25
 		}
 		suspensionTarget = 0.5
 		boundsColliderName = Bounds
