--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-Skid.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-Skid.cfg
@@ -21,6 +21,7 @@
 			radius = 0.09
 			mass = 0.04
 			travel = 0.15
+			load = 0.25
 		}
 		WHEEL
 		{
@@ -28,6 +29,7 @@
 			radius = 0.09
 			mass = 0.04
 			travel = 0.15
+			load = 0.25
 		}
 		WHEEL
 		{
@@ -35,6 +37,7 @@
 			radius = 0.09
 			mass = 0.04
 			travel = 0.15
+			load = 0.25
 		}
 		WHEEL
 		{
@@ -42,6 +45,7 @@
 			radius = 0.09
 			mass = 0.04
 			travel = 0.15
+			load = 0.25
 		}
 		suspensionTarget = 0.5
 		boundsColliderName = Bounds
