--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSimple.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSimple.cfg
@@ -60,6 +60,7 @@
 			radius = 0.13
 			mass = 0.04
 			travel = 0.05
+			load = 0.20
 		}
 		WHEEL
 		{
@@ -67,6 +68,7 @@
 			radius = 0.13
 			mass = 0.04
 			travel = 0.05
+			load = 0.20
 		}
 		WHEEL
 		{
@@ -74,6 +76,7 @@
 			radius = 0.13
 			mass = 0.04
 			travel = 0.05
+			load = 0.20
 		}
 		WHEEL
 		{
@@ -81,6 +84,7 @@
 			radius = 0.13
 			mass = 0.04
 			travel = 0.05
+			load = 0.20
 		}
 		WHEEL
 		{
@@ -88,6 +92,7 @@
 			radius = 0.13
 			mass = 0.04
 			travel = 0.05
+			load = 0.20
 		}
 		WHEEL
 		{
@@ -95,6 +100,7 @@
 			radius = 0.13
 			mass = 0.04
 			travel = 0.05
+			load = 1
 		}
 		suspensionTarget = 0.5
 		boundsColliderName = Bounds
