--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSurface.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSurface.cfg
@@ -24,6 +24,7 @@
 			radius = 0.16
 			mass = 0.04
 			travel = 0.1
+			load = 0.5
 		}
 		WHEEL
 		{
@@ -31,6 +32,7 @@
 			radius = 0.16
 			mass = 0.04
 			travel = 0.1
+			load = 0.5
 		}
 		suspensionTarget = 0.5
 		boundsColliderName = Bounds
