--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackTiny.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackTiny.cfg
@@ -23,6 +23,7 @@
 			radius = 0.22
 			mass = 0.04
 			travel = 0.14
+			load = 0.5
 		}
 		WHEEL
 		{
@@ -30,6 +31,7 @@
 			radius = 0.22
 			mass = 0.04
 			travel = 0.14
+			load = 0.5
 		}
 		WHEEL
 		{
@@ -37,6 +39,7 @@
 			radius = 0.12
 			mass = 0.04
 			travel = 0.05
+			load = 0.5
 		}
 		WHEEL
 		{
@@ -44,6 +47,7 @@
 			radius = 0.12
 			mass = 0.04
 			travel = 0.05
+			load = 0.5
 		}
 		suspensionTarget = 0.5
 		boundsColliderName = Bounds
