--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelTiny.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelTiny.cfg
@@ -23,6 +23,7 @@
 			radius = 0.21
 			mass = 0.04
 			travel = 0.1
+			load = 0.5
 		}
 		WHEEL
 		{
@@ -30,6 +31,7 @@
 			radius = 0.21
 			mass = 0.04
 			travel = 0.1
+			load = 0.5
 		}
 		suspensionTarget = 0.25
 		boundsColliderName = Bounds
