--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackMole.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackMole.cfg
@@ -26,6 +26,7 @@
 			radius = 1.20
 			mass = 0.1
 			travel = 0.1
+			load = 0.5
 		}
 		WHEEL
 		{
@@ -33,6 +34,7 @@
 			radius = 1.3
 			mass = 0.1
 			travel = 0.35
+			load = 0.25
 		}
 		WHEEL
 		{
@@ -40,6 +42,7 @@
 			radius = 1.3
 			mass = 0.1
 			travel = 0.35
+			load = 0.25
 		}
 		WHEEL
 		{
@@ -47,6 +50,7 @@
 			radius = 1.3
 			mass = 0.1
 			travel = 0.35
+			load = 0.25
 		}
 		WHEEL
 		{
@@ -54,6 +58,7 @@
 			radius = 1.3
 			mass = 0.1
 			travel = 0.35
+			load = 0.25
 		}
 		WHEEL
 		{
@@ -61,6 +66,7 @@
 			radius = 1.20
 			mass = 0.1
 			travel = 0.1
+			load = 0.5
 		}
 		suspensionTarget = 0.5
 		boundsColliderName = Bounds
