fix TS module defs for stock parts

--- a/GameData/KSPWheel/Patches/Stock/Stock-gear.cfg
+++ b/GameData/KSPWheel/Patches/Stock/Stock-gear.cfg
@@ -8,7 +8,7 @@
 	-MODULE[ModuleWheelBrakes]{}
 	-MODULE[ModuleWheelDamage]{}
 	-MODULE[TweakScale]{}
-	MODULE[TweakScale]
+	MODULE
 	{
 		name = TweakScale
 		type = KSPWheelSmallWheel
@@ -72,7 +72,7 @@
 	-MODULE[ModuleWheelSteering]{}
 	-MODULE[ModuleWheelDamage]{}
 	-MODULE[TweakScale]{}
-	MODULE[TweakScale]
+	MODULE
 	{
 		name = TweakScale
 		type = KSPWheelSmallWheel
@@ -147,7 +147,7 @@
 	-MODULE[ModuleWheelDeployment]{}
 	-MODULE[ModuleWheelDamage]{}
 	-MODULE[TweakScale]{}
-	MODULE[TweakScale]
+	MODULE
 	{
 		name = TweakScale
 		type = KSPWheelSmallWheel
@@ -225,7 +225,7 @@
 	-MODULE[ModuleWheelBrakes]{}
 	-MODULE[ModuleWheelDamage]{}
 	-MODULE[TweakScale]{}
-	MODULE[TweakScale]
+	MODULE
 	{
 		name = TweakScale
 		type = KSPWheelMediumWheel
@@ -303,7 +303,7 @@
 	-MODULE[ModuleWheelBogey]{}
 	-MODULE[ModuleWheelDamage]{}
 	-MODULE[TweakScale]{}
-	MODULE[TweakScale]
+	MODULE
 	{
 		name = TweakScale
 		type = KSPWheelMediumWheel
@@ -388,7 +388,7 @@
 	-MODULE[ModuleWheelBogey]{}
 	-MODULE[ModuleWheelDamage]{}
 	-MODULE[TweakScale]{}
-	MODULE[TweakScale]
+	MODULE
 	{
 		name = TweakScale
 		type = KSPWheelLargeWheel
