--- a/GameData/KSPWheel/Patches/Stock/Stock-legs.cfg
+++ b/GameData/KSPWheel/Patches/Stock/Stock-legs.cfg
@@ -9,7 +9,7 @@
 	-MODULE[ModuleWheelLock]{}
 	-MODULE[ModuleWheelDamage]{}
 	-MODULE[TweakScale]{}
-	MODULE[TweakScale]
+	MODULE
 	{
 		name = TweakScale
 		type = KSPWheelSmallWheel
@@ -74,7 +74,7 @@
 	-MODULE[ModuleWheelBogey]{}
 	-MODULE[ModuleWheelDamage]{}
 	-MODULE[TweakScale]{}
-	MODULE[TweakScale]
+	MODULE
 	{
 		name = TweakScale
 		type = KSPWheelMediumWheel
@@ -149,7 +149,7 @@
 	-MODULE[ModuleWheelBogey]{}
 	-MODULE[ModuleWheelDamage]{}
 	-MODULE[TweakScale]{}
-	MODULE[TweakScale]
+	MODULE
 	{
 		name = TweakScale
 		type = KSPWheelMediumWheel
