--- a/GameData/KSPWheel/Patches/Stock/Stock-wheels.cfg
+++ b/GameData/KSPWheel/Patches/Stock/Stock-wheels.cfg
@@ -10,7 +10,7 @@
 	-MODULE[ModuleWheelBrakes]{}
 	-MODULE[ModuleWheelDamage]{}
 	-MODULE[TweakScale]{}
-	MODULE[TweakScale]
+	MODULE
 	{
 		name = TweakScale
 		type = KSPWheelSmallWheel
@@ -90,7 +90,7 @@
 	-MODULE[ModuleWheelBrakes]{}
 	-MODULE[ModuleWheelDamage]{}
 	-MODULE[TweakScale]{}
-	MODULE[TweakScale]
+	MODULE
 	{
 		name = TweakScale
 		type = KSPWheelMediumWheel
@@ -169,7 +169,7 @@ roverWheelTR-2L - truck wheels
 	-MODULE[ModuleWheelBrakes]{}
 	-MODULE[ModuleWheelDamage]{}
 	-MODULE[TweakScale]{}
-	MODULE[TweakScale]
+	MODULE
 	{
 		name = TweakScale
 		type = KSPWheelMediumWheel
@@ -247,7 +247,7 @@ roverWheelTR-2L - truck wheels
 	-MODULE[ModuleWheelBrakes]{}
 	-MODULE[ModuleWheelDamage]{}
 	-MODULE[TweakScale]{}
-	MODULE[TweakScale]
+	MODULE
 	{
 		name = TweakScale
 		type = KSPWheelLargeWheel
